Resetting MASTER.java to question 41 level