@@ -1,39 +1,25 @@
 package systemesRepartis;
-
-import java.io.InputStream;
-import java.io.PrintStream;
-import java.util.Scanner;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
 
 public class MASTER {
-	public static void main(String[] args) throws Exception {
-		Process p = Runtime.getRuntime().exec("ls /jeslmkjs");
-		inheritIO(p.getInputStream(), System.out);
-		inheritIO(p.getErrorStream(), System.err);
+    public static void main(String[] args) throws IOException {
+    	
+    	//ProcessBuilder pb1 = new ProcessBuilder("ls", "-al", "/tmp");
+    	
+    	ProcessBuilder pb1 = new ProcessBuilder("java", "-jar", "/home/bud/Downloads/tmp/inf727_system_repartis/slave.jar");
+    	Process pro = pb1.start();
+    	BufferedReader reader = new BufferedReader(new InputStreamReader(pro.getInputStream()));
+        StringBuilder builder = new StringBuilder();
+        String line = null;
 
-	}
+        while ( (line = reader.readLine()) != null) {
+            builder.append(line);
+            builder.append(System.getProperty("line.separator"));
+        }
 
-	private static void inheritIO(final InputStream src, final PrintStream dest) {
-		new Thread(new Runnable() {
-			private Scanner sc;
-
-			public void run() {
-				sc = new Scanner(src);
-				while (sc.hasNextLine()) {
-					dest.println(sc.nextLine());
-				}
-			}
-		}).start();
-	}
+        String result = builder.toString();
+        System.out.println("Reader : " + result);
+    }
 }
-
-/*
- * public static void main(String[] args) throws Exception { Process p =
- * Runtime.getRuntime().exec("cmd /c dir"); inheritIO(p.getInputStream(),
- * System.out); inheritIO(p.getErrorStream(), System.err);
- * 
- * }
- * 
- * 
- * 
- * 
- */
